chore: fix annoying layout shift on modal open

--- a/day9-dayx/nebula/src/index.css
+++ b/day9-dayx/nebula/src/index.css
@@ -26,6 +26,10 @@
   @apply rounded-lg;
 }
 
+* {
+  scrollbar-gutter: auto !important;
+}
+
 .scrollbar-thin {
   scrollbar-width: thin;
 }
